# vdownloader

./: LICENSE  README.md  build_deb.sh  meson.build  search  vxap-downloader_1.0.0-1_amd64.deb  vxap-downloader_1.0.0_amd64.deb
data/: com.vxap.downloader.desktop  org.vaxp.downloader.desktop  org.vaxp.downloader.gresource.xml
data/css/: style.css
debian/: changelog  control  copyright  debhelper-build-stamp  files  rules  vxap-downloader.substvars
debian/.debhelper/vxap-downloader/: dbgsym-build-ids
debian/.debhelper/vxap-downloader/dbgsym-root/DEBIAN/: control  md5sums
debian/.debhelper/vxap-downloader/dbgsym-root/usr/share/doc/: vxap-downloader-dbgsym
debian/vxap-downloader/DEBIAN/: conffiles  control  md5sums
debian/vxap-downloader/usr/share/vxap-downloader/extension/: manifest.json  popup.css  popup.html
extension/: background.js  content.js  popup.js
native-messaging/: install.sh  org.vaxp.downloader.chrome.json  org.vaxp.downloader.firefox.json  vdl-native-host.py
resources/: style.css  vxap.gresource.xml
src/: main.c
src/app/: vxap_app.c  vxap_app.h  vxap_config.c  vxap_config.h
src/aria2/: aria2_client.c  aria2_client.h  aria2_monitor.c  aria2_monitor.h  aria2_types.c  aria2_types.h
src/core/: download_manager.c  download_manager.h  download_queue.c  download_queue.h  utils.c  utils.h  vdl-application.c  vdl-application.h  vdl-config.c  vdl-config.h  vdl-enums.h  vdl-logger.c  vdl-logger.h  vdl-types.h  vdl-utils.c  vdl-utils.h
src/data/migrations/: vdl-db-migration.c  vdl-db-migration.h
src/data/models/: vdl-download-model.c  vdl-download-model.h  vdl-torrent-model.c  vdl-torrent-model.h
src/data/repositories/: vdl-sqlite-repo.c  vdl-sqlite-repo.h
src/domain/entities/: vdl-category.c  vdl-category.h  vdl-download-item.c  vdl-download-item.h
src/engine/http/: vdl-chunk-manager.c  vdl-chunk-manager.h  vdl-http-engine.c  vdl-http-engine.h  vdl-segment.c  vdl-segment.h  vdl-speed-limiter.c  vdl-speed-limiter.h
src/engine/scheduler/: vdl-queue-manager.c  vdl-queue-manager.h  vdl-scheduler.c  vdl-scheduler.h
src/engine/torrent/: vdl-torrent-engine.cpp  vdl-torrent-engine.h
src/presentation/dialogs/: vdl-add-download-dialog.c  vdl-add-download-dialog.h  vdl-preferences-dialog.c  vdl-preferences-dialog.h
src/presentation/views/: vdl-categories-view.c  vdl-categories-view.h  vdl-downloads-view.c  vdl-downloads-view.h  vdl-statistics-view.c  vdl-statistics-view.h  vdl-torrents-view.c  vdl-torrents-view.h
src/presentation/widgets/: vdl-download-row.c  vdl-download-row.h  vdl-headerbar.c  vdl-headerbar.h  vdl-progress-ring.c  vdl-progress-ring.h  vdl-sidebar.c  vdl-sidebar.h  vdl-speed-graph.c  vdl-speed-graph.h
src/presentation/windows/: vdl-main-window.c  vdl-main-window.h
src/services/: vdl-checksum-verifier.c  vdl-checksum-verifier.h  vdl-clipboard-monitor.c  vdl-clipboard-monitor.h  vdl-notification-service.c  vdl-notification-service.h
src/ui/: theme_manager.c
src/ui/widgets/: download_row.c  download_row.h  sidebar.c  sidebar.h  statusbar.c  statusbar.h
src/ui/window/: add_dialog.c  add_dialog.h  main_window.c  main_window.h
vxap-downloader_1.0.0_amd64/DEBIAN/: control
vxap-downloader_1.0.0_amd64/usr/share/glib-2.0/schemas/: com.vxap.downloader.gschema.xml
